<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ArticleActivity">

    <TextView
            android:text="@string/pr_nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/firstName"
            app:layout_constraintTop_toTopOf="@+id/avatar"
            app:layout_constraintStart_toEndOf="@+id/avatar" android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/avatar"/>
    <TextView
            android:text="@string/nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lastName" app:layout_constraintStart_toEndOf="@+id/firstName"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/firstName"
            app:layout_constraintBottom_toBottomOf="@+id/firstName"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher_round"
            android:id="@+id/avatar" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:contentDescription="@string/avatar"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
            android:id="@+id/articleImage" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/avatar" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/image_accompagnant_l_article"/>
    <Button
            android:text="@string/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLike" app:layout_constraintStart_toStartOf="@+id/nbLike"
            app:layout_constraintTop_toBottomOf="@+id/nbLike" app:layout_constraintEnd_toEndOf="@+id/nbLike"
            android:layout_marginTop="8dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonDislike" android:text="@string/dislike"
            app:layout_constraintStart_toStartOf="@+id/nbDislike"
            app:layout_constraintEnd_toEndOf="@+id/nbDislike"
            app:layout_constraintTop_toBottomOf="@+id/nbDislike" app:layout_constraintHorizontal_bias="0.448"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/nombre_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nbLike"
            app:layout_constraintTop_toBottomOf="@+id/articleText"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="100dp"/>
    <TextView
            android:text="@string/nombre_dislike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nbDislike"
            app:layout_constraintTop_toTopOf="@+id/nbLike"
            app:layout_constraintStart_toEndOf="@+id/nbLike"
            app:layout_constraintBottom_toBottomOf="@+id/nbLike" app:layout_constraintEnd_toEndOf="parent"
    />
    <TextView
            android:text="@string/contenu_string_image_accompagnant_l_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/articleText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/articleImage" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/description_de_l_article"/>
    <ListView
            android:layout_width="395dp"
            android:layout_height="390dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonDislike" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/comments"/>
    <TextView
            android:text="@string/titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/articleTitle"
            app:layout_constraintTop_toBottomOf="@+id/avatar" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/articleImage" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>