<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             tools:context=".ArticleViewRowFragment" android:id="@+id/recyclerLayout"
                                             android:background="#444">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title" android:id="@+id/titleText"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="30sp" app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginStart="16dp" android:textColor="@color/common_google_signin_btn_text_dark_default"/>
    <TextView
            android:text="@string/likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/likeText" app:layout_constraintStart_toStartOf="@+id/titleText"
            app:layout_constraintTop_toBottomOf="@+id/titleText" android:layout_marginStart="8dp"
            android:textSize="18sp" android:textColor="@color/cardview_light_background"/>
    <TextView
            android:text="@string/dislikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dislikeText" app:layout_constraintStart_toStartOf="@+id/likeText"
            app:layout_constraintTop_toBottomOf="@+id/likeText" android:textSize="18sp"
            android:textColor="@color/cardview_light_background"/>
    <ImageView
            android:src="@drawable/googleg_standard_color_18"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="8dp"
            android:contentDescription="@string/articlepicture"/>
    <View
            android:id="@+id/divider"
            android:layout_width="395dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintVertical_bias="1.0"/>

</android.support.constraint.ConstraintLayout>